--- a/threetier.yaml
+++ b/threetier.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: "mohanraz81/backendsyn2906"
+          image: "kothandd/backendanz"
           ports:
             - name: http
               containerPort: 80
