--- a/threetier.yaml
+++ b/threetier.yaml
@@ -76,7 +76,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: "mohanraz81/frontendsyn2906"
+        image: "kothandd/frontendanz"
         ports:
           - name: http
             containerPort: 80
